fixed purchase jumbotron on mobile

--- a/src/Components/Purchase/Purchase.css
+++ b/src/Components/Purchase/Purchase.css
@@ -1,15 +1,18 @@
 #purchase {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     flex-direction: column;
     overflow: hidden;
     height: 70vh;
     background-color: #51B6EE;
     color: white;
+    text-align: center;
+    position: relative;
 }
 #purchase #purchase-text {
-    font-size: 4vw;
+    margin-top: 5%;
+    font-size: 5vh;
 }
 
 #purchase #purchase-button {
@@ -31,7 +34,7 @@
     transition-duration: 0.2s;
 }
 #purchase img {
-    width: 50vw;
-    position: relative;
-    bottom: -20%;
+    width: 80vh;
+    position: absolute;
+    bottom: 0;
 }
